@@ -4,6 +4,10 @@ Changelog
 1.0b10 - Unreleased
 ------------------
 
+* Close the response object after searching in order to avoid
+  `ResponseNotReady` errors triggering duplicate queries.
+  [witsch]
+
 * Format relevance value for search results.
   [witsch]
 
